# rust-vue-admin

./: .gitignore  Makefile  README.md
server/: Cargo.toml  config.yaml
server/scripts/: reset_data.sql
server/src/: main.rs
server/src/api/: base.rs  init.rs  mod.rs  user.rs
server/src/api/system/: mod.rs  sys_api.rs  sys_authority.rs  sys_authority_btn.rs  sys_dictionary.rs  sys_dictionary_detail.rs  sys_email.rs  sys_error.rs  sys_menu.rs  sys_operation_record.rs  sys_params.rs  sys_system.rs  sys_user.rs
server/src/config/: captcha.rs  cors.rs  database.rs  email.rs  jwt.rs  log.rs  mod.rs  redis.rs  system.rs
server/src/core/: logger.rs  mod.rs  server.rs
server/src/global/: mod.rs  response.rs  state.rs
server/src/initialize/: casbin.rs  config.rs  config_watcher.rs  db.rs  mod.rs  redis.rs
server/src/middleware/: auth.rs  casbin.rs  cors.rs  mod.rs  rate_limit.rs  request_log.rs
server/src/migration/: m20240101_000001_create_tables.rs  m20240101_000002_seed_data.rs  m20240101_000003_seed_api_casbin.rs  mod.rs
server/src/model/: mod.rs
server/src/model/common/: mod.rs
server/src/model/system/: casbin_rule.rs  mod.rs  sys_api.rs  sys_authority_btn.rs  sys_authority_menu.rs  sys_base_menu_btn.rs  sys_base_menu_parameter.rs  sys_data_authority_id.rs  sys_dictionary.rs  sys_dictionary_detail.rs  sys_error.rs  sys_ignore_api.rs  sys_jwt_blacklist.rs  sys_menu.rs  sys_operation_record.rs  sys_params.rs  sys_role.rs  sys_user.rs  sys_user_authority.rs
server/src/router/: health.rs  mod.rs
server/src/service/: mod.rs  user.rs
server/src/service/system/: mod.rs  sys_api.rs  sys_authority.rs  sys_authority_btn.rs  sys_casbin.rs  sys_dictionary.rs  sys_dictionary_detail.rs  sys_error.rs  sys_menu.rs  sys_operation_record.rs  sys_params.rs  sys_system.rs
server/src/utils/: captcha.rs  jwt.rs  mod.rs  password.rs
web/: .env.production  README.md  index.html  openDocument.js  package.json  vite.config.js
web/src/: main.js  permission.js
web/src/api/: github.js  initdb.js  user.js
web/src/components/bottomInfo/: bottomInfo.vue
web/src/components/logo/: index.vue
web/src/core/: config.js  error-handel.js  global.js  rust-vue-admin.js
web/src/view/about/: index.vue
web/src/view/dashboard/: index.vue
web/src/view/dashboard/components/: banner.vue  pluginTable.vue  quickLinks.vue  table.vue  wiki.vue
web/src/view/error/: index.vue
web/src/view/init/: index.vue
web/src/view/layout/: iframe.vue
web/src/view/layout/header/: index.vue  tools.vue
web/src/view/layout/setting/modules/general/: index.vue
web/src/view/login/: index.vue
web/src/view/person/: person.vue
web/src/view/superAdmin/api/: api.vue
web/src/view/superAdmin/authority/components/: datas.vue
web/src/view/superAdmin/menu/: menu.vue
web/src/view/superAdmin/params/: sysParams.vue
web/src/view/systemTools/autoCode/: index.vue  picture.vue
web/src/view/systemTools/exportTemplate/: exportTemplate.vue
web/src/view/systemTools/skills/: index.vue
